# mongo-rust-driver-prototype

./: Cargo.toml  README.md
src/: auth.rs  command_type.rs  common.rs  connstring.rs  cursor.rs  error.rs  lib.rs  pool.rs  stream.rs
src/apm/: event.rs
src/coll/: batch.rs  error.rs  mod.rs  options.rs
src/db/: mod.rs  roles.rs
src/gridfs/: file.rs  mod.rs
src/topology/: mod.rs  monitor.rs  server.rs
src/wire_protocol/: operations.rs
tests/apm/: mod.rs
tests/auth/: mod.rs
tests/client/: bulk.rs  coll.rs  connstring.rs  cursor.rs  db.rs  error.rs  gridfs.rs  mod.rs  wire_protocol.rs
tests/client/crud_spec/: framework.rs  read.rs  write.rs
tests/json/crud/: arguments.rs  options.rs  outcome.rs  reader.rs
tests/json/sdam/: outcome.rs  reader.rs  responses.rs
tests/json/server_selection/: reader.rs  server.rs
tests/sdam/: framework.rs  single.rs
tests/server_selection/: framework.rs
tests/ssl/: mod.rs
tests/v3_0/client/: coll.rs
tests/v3_2/client/: coll.rs
