[package]
authors = ["Kevin Yeh <kevinyeah@utexas.edu>", "Saghm Rossi <saghmrossi@gmail.com>", "Valeri Karpov <valkar207@gmail.com>"]
description = "A native MongoDB driver developed under MongoDB labs."
documentation = "https://docs.rs/mongodb"
keywords = ["mongo", "mongodb", "database", "bson", "nosql"]
license = "Apache-2.0"
name = "mongodb"
readme = "README.md"
repository = "https://github.com/mongodb-labs/mongo-rust-driver-prototype"
version = "0.3.10"

[dependencies]
bitflags = "1.0.4"
bson = "0.13.0"
bufstream = "0.1.4"
byteorder = "1.2.6"
chrono = "0.4.6"
data-encoding = "2.0.0"
rand = "0.5.5"
scan_fmt = "0.1.1"
semver = "0.9.0"
separator = "0.3.1"
time = "0.1.37"
md-5 = "0.8.0"
sha-1 = "0.7.0"
hmac = "0.6.0"
pbkdf2 = { version = "0.2.0", default-features = false }
hex = "0.3.2"


#[dependencies.clippy]
#optional = true
#version = "0.0.301"

[dependencies.openssl]
optional = true
version = "0.10.12"

[dependencies.textnonce]
default-features = false
version = "0.6.3"

[dev-dependencies]
approx = "0.3.0"
serde = "1.0.79"
serde_derive = "1.0.79"

[dev-dependencies.serde_json]
features = ["preserve_order"]
version = "1.0.31"

[features]
default = []
ssl = ["openssl"]
#lint = ["clippy"]
